--- a/app/templates/bmc/html/com_groups/groups.less
+++ b/app/templates/bmc/html/com_groups/groups.less
@@ -119,7 +119,7 @@
 }
 
 /* BEGIN: Fixing files plugin */
-.qq-upload-button span, .qq-upload-drop-area span {
+.files-wrap .qq-upload-button span, .files-wrap .qq-upload-drop-area span {
 	font-size: 0.8em;
 }
 
