--- a/templates/bmc/html/plg_members_collections/collections.css
+++ b/templates/bmc/html/plg_members_collections/collections.css
@@ -2,3 +2,9 @@
 #hubForm .item-asset .delete {
   height: 1.5em;
 }
+.linker-button span:before,
+.qq-upload-button span:before {
+  font-size: 1.5em;
+  left: -0.1em;
+  top: 0;
+}
